# seedcare

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: known-issues.md  plan.md
seedcare/: __main__.py  collector.py  config.py  dashboard.py  db.py  notifier.py  purge.py
seedcare/templates/: dashboard.html
systemd/: seedcare-dashboard.service
tests/: test_collector.py  test_db.py  test_notifier.py  test_purge.py
